@@ -18,7 +18,7 @@ import com.predic8.membrane.core.config.*;
 import com.predic8.membrane.core.exchange.*;
 import com.predic8.membrane.core.http.*;
 import com.predic8.membrane.core.interceptor.*;
-import com.predic8.membrane.core.rules.*;
+import com.predic8.membrane.core.proxies.*;
 import org.slf4j.*;
 import org.springframework.http.*;
 
@@ -40,276 +40,278 @@ import static java.nio.charset.StandardCharsets.*;
  * @description Converts REST requests into SOAP messages.
  * @topic 8. SOAP based Web Services
  */
-@MCElement(name="rest2Soap")
+@MCElement(name = "rest2Soap")
 public class REST2SOAPInterceptor extends SOAPRESTHelper {
 
-	@MCElement(name="mapping", topLevel=false, id="rest2Soap-mapping")
-	public static class Mapping extends AbstractXmlElement {
-		public String regex;
-		public String soapAction;
-		public String soapURI;
-		public String requestXSLT;
-		public String responseXSLT;
+    @MCElement(name = "mapping", topLevel = false, id = "rest2Soap-mapping")
+    public static class Mapping extends AbstractXmlElement {
+        public String regex;
+        public String soapAction;
+        public String soapURI;
+        public String requestXSLT;
+        public String responseXSLT;
 
-		@Override
-		protected void parseAttributes(XMLStreamReader token) throws Exception {
-			regex = token.getAttributeValue("", "regex");
-			soapAction = token.getAttributeValue("", "soapAction");
-			soapURI = token.getAttributeValue("", "soapURI");
-			requestXSLT = token.getAttributeValue("", "requestXSLT");
-			responseXSLT = token.getAttributeValue("", "responseXSLT");
-		}
+        @Override
+        protected void parseAttributes(XMLStreamReader token) {
+            regex = token.getAttributeValue("", "regex");
+            soapAction = token.getAttributeValue("", "soapAction");
+            soapURI = token.getAttributeValue("", "soapURI");
+            requestXSLT = token.getAttributeValue("", "requestXSLT");
+            responseXSLT = token.getAttributeValue("", "responseXSLT");
+        }
 
-		@Override
-		public void write(XMLStreamWriter out) throws XMLStreamException {
-			out.writeStartElement("mapping");
+        @Override
+        public void write(XMLStreamWriter out) throws XMLStreamException {
+            out.writeStartElement("mapping");
 
-			out.writeAttribute("regex", regex);
-			out.writeAttribute("soapAction", soapAction);
-			out.writeAttribute("soapURI", soapURI);
-			out.writeAttribute("requestXSLT", requestXSLT);
-			out.writeAttribute("responseXSLT", responseXSLT);
-			out.writeEndElement();
-		}
+            out.writeAttribute("regex", regex);
+            out.writeAttribute("soapAction", soapAction);
+            out.writeAttribute("soapURI", soapURI);
+            out.writeAttribute("requestXSLT", requestXSLT);
+            out.writeAttribute("responseXSLT", responseXSLT);
+            out.writeEndElement();
+        }
 
-		public String getRegex() {
-			return regex;
-		}
+        public String getRegex() {
+            return regex;
+        }
 
-		/**
-		 * @description Java Regular expression
-		 * @example /bank/.*
-		 */
-		@Required
-		@MCAttribute
-		public void setRegex(String regex) {
-			this.regex = regex;
-		}
+        /**
+         * @description Java Regular expression
+         * @example /bank/.*
+         */
+        @Required
+        @MCAttribute
+        public void setRegex(String regex) {
+            this.regex = regex;
+        }
 
-		public String getSoapAction() {
-			return soapAction;
-		}
+        public String getSoapAction() {
+            return soapAction;
+        }
 
-		/**
-		 * @description Value of the soapAction header field.
-		 */
-		@Required
-		@MCAttribute
-		public void setSoapAction(String soapAction) {
-			this.soapAction = soapAction;
-		}
+        /**
+         * @description Value of the soapAction header field.
+         */
+        @Required
+        @MCAttribute
+        public void setSoapAction(String soapAction) {
+            this.soapAction = soapAction;
+        }
 
-		@SuppressWarnings("unused")
-		public String getSoapURI() {
-			return soapURI;
-		}
+        @SuppressWarnings("unused")
+        public String getSoapURI() {
+            return soapURI;
+        }
 
-		/**
-		 * @description Endpoint address of the SOAP service.
-		 * @example /axis2/$1
-		 */
-		@Required
-		@MCAttribute
-		public void setSoapURI(String soapURI) {
-			this.soapURI = soapURI;
-		}
+        /**
+         * @description Endpoint address of the SOAP service.
+         * @example /axis2/$1
+         */
+        @Required
+        @MCAttribute
+        public void setSoapURI(String soapURI) {
+            this.soapURI = soapURI;
+        }
 
-		public String getRequestXSLT() {
-			return requestXSLT;
-		}
+        public String getRequestXSLT() {
+            return requestXSLT;
+        }
 
-		/**
-		 * @description Transformation that will be applied to the request.
-		 * @example blz-request.xsl
-		 */
-		@Required
-		@MCAttribute
-		public void setRequestXSLT(String requestXSLT) {
-			this.requestXSLT = requestXSLT;
-		}
+        /**
+         * @description Transformation that will be applied to the request.
+         * @example blz-request.xsl
+         */
+        @Required
+        @MCAttribute
+        public void setRequestXSLT(String requestXSLT) {
+            this.requestXSLT = requestXSLT;
+        }
 
-		public String getResponseXSLT() {
-			return responseXSLT;
-		}
+        public String getResponseXSLT() {
+            return responseXSLT;
+        }
 
-		/**
-		 * @description Transformation that will be applied to the response.
-		 * @example shop-request.xsl
-		 */
-		@Required
-		@MCAttribute
-		public void setResponseXSLT(String responseXSLT) {
-			this.responseXSLT = responseXSLT;
-		}
-	}
+        /**
+         * @description Transformation that will be applied to the response.
+         * @example shop-request.xsl
+         */
+        @Required
+        @MCAttribute
+        public void setResponseXSLT(String responseXSLT) {
+            this.responseXSLT = responseXSLT;
+        }
+    }
 
-	private static final Logger log = LoggerFactory.getLogger(REST2SOAPInterceptor.class.getName());
+    private static final Logger log = LoggerFactory.getLogger(REST2SOAPInterceptor.class.getName());
 
-	private List<Mapping> mappings = new ArrayList<>();
-	private Boolean isSOAP12;
+    private List<Mapping> mappings = new ArrayList<>();
+    private Boolean isSOAP12;
 
-	public REST2SOAPInterceptor() {
-		name = "REST 2 SOAP Gateway";
-	}
+    public REST2SOAPInterceptor() {
+        name = "REST 2 SOAP Gateway";
+    }
 
-	@Override
-	public Outcome handleRequest(Exchange exc) throws Exception {
-		log.debug("uri: " + getURI(exc));
-		String uri = getURI(exc);
+    @Override
+    public Outcome handleRequest(Exchange exc) throws Exception {
+        log.debug("uri: {}",getURI(exc));
+        String uri = getURI(exc);
 
-		Mapping mapping = findFirstMatchingRegEx(uri);
-		if (mapping == null)
-			return CONTINUE;
+        Mapping mapping = findFirstMatchingRegEx(uri);
+        if (mapping == null)
+            return CONTINUE;
 
-		transformAndReplaceBody(exc.getRequest(), mapping.requestXSLT,
-				getRequestXMLSource(exc), exc.getStringProperties());
-		modifyRequest(exc, mapping);
+        transformAndReplaceBody(exc.getRequest(), mapping.requestXSLT,
+                getRequestXMLSource(exc), exc.getStringProperties());
+        modifyRequest(exc, mapping);
 
-		return CONTINUE;
-	}
+        return CONTINUE;
+    }
 
-	@Override
-	public Outcome handleResponse(Exchange exc) throws Exception {
-		Mapping mapping = getRESTURL(exc);
-		log.debug("restURL: " + mapping);
-		if (getRESTURL(exc) == null)
-			return CONTINUE;
+    @Override
+    public Outcome handleResponse(Exchange exc) throws Exception {
+        Mapping mapping = getRESTURL(exc);
+        log.debug("restURL: {}",mapping);
+        if (getRESTURL(exc) == null)
+            return CONTINUE;
 
-		if (log.isDebugEnabled())
-			log.debug("response: " + new String(getTransformer(null).transform(getBodySource(exc), exc.getStringProperties()), UTF_8));
+        if (log.isDebugEnabled())
+            log.debug("response: {}",new String(getTransformer(null).transform(getBodySource(exc), exc.getStringProperties()), UTF_8));
 
-		exc.getResponse().setBodyContent(getTransformer(mapping.responseXSLT).
-				transform(getBodySource(exc)));
-		Header header = exc.getResponse().getHeader();
-		header.removeFields(CONTENT_TYPE);
-		header.setContentType(TEXT_XML_UTF8);
+        exc.getResponse().setBodyContent(getTransformer(mapping.responseXSLT).
+                transform(getBodySource(exc)));
+        Header header = exc.getResponse().getHeader();
+        header.removeFields(CONTENT_TYPE);
+        header.setContentType(TEXT_XML_UTF8);
 
-		XML2HTTP.unwrapMessageIfNecessary(exc.getResponse());
-		convertResponseToJSONIfNecessary(exc.getRequest().getHeader(), exc.getResponse(), exc.getStringProperties());
+        XML2HTTP.unwrapMessageIfNecessary(exc.getResponse());
+        convertResponseToJSONIfNecessary(exc.getRequest().getHeader(), exc.getResponse(), exc.getStringProperties());
 
-		return CONTINUE;
-	}
+        return CONTINUE;
+    }
 
-	private void convertResponseToJSONIfNecessary(Header header, Response response, Map<String, String> properties) throws Exception {
-		if (!response.isXML())
-			return;
+    private void convertResponseToJSONIfNecessary(Header header, Response response, Map<String, String> properties) throws Exception {
+        if (!response.isXML())
+            return;
 
-		String accept = header.getFirstValue(ACCEPT);
-		if (accept == null)
-			return;
+        String accept = header.getFirstValue(ACCEPT);
+        if (accept == null)
+            return;
 
-		List<MediaType> types = sortMimeTypeByQualityFactorAscending(accept);
-		if (types.isEmpty())
-			return;
+        List<MediaType> types = sortMimeTypeByQualityFactorAscending(accept);
+        if (types.isEmpty())
+            return;
 
-		if (!isJson(types.get(0)))
-			return;
+        if (!isJson(types.getFirst().toString()))
+            return;
 
-		response.setBodyContent(xml2json(response.getBodyAsStreamDecoded(), properties));
-		setJSONContentType(response.getHeader());
-	}
+        response.setBodyContent(xml2json(response.getBodyAsStreamDecoded(), properties));
+        setJSONContentType(response.getHeader());
+    }
 
-	private byte[] xml2json(InputStream xmlResp, Map<String, String> properties) throws Exception {
-		return getTransformer("classpath:/com/predic8/membrane/core/interceptor/rest/xml2json.xsl").
-				transform(new StreamSource(xmlResp), properties);
-	}
+    private byte[] xml2json(InputStream xmlResp, Map<String, String> properties) throws Exception {
+        return getTransformer("classpath:/com/predic8/membrane/core/interceptor/rest/xml2json.xsl").
+                transform(new StreamSource(xmlResp), properties);
+    }
 
-	private StreamSource getBodySource(Exchange exc) {
-		return new StreamSource(exc.getResponse().getBodyAsStreamDecoded());
-	}
+    private StreamSource getBodySource(Exchange exc) {
+        return new StreamSource(exc.getResponse().getBodyAsStreamDecoded());
+    }
 
-	private Mapping getRESTURL(Exchange exc) {
-		return (Mapping) exc.getProperty("mapping");
-	}
+    private Mapping getRESTURL(Exchange exc) {
+        return (Mapping) exc.getProperty("mapping");
+    }
 
-	private Mapping findFirstMatchingRegEx(String uri) {
-		for (Mapping m : mappings) {
-			if (Pattern.matches(m.regex, uri))
-				return m;
-		}
-		return null;
-	}
+    private Mapping findFirstMatchingRegEx(String uri) {
+        for (Mapping m : mappings) {
+            if (Pattern.matches(m.regex, uri))
+                return m;
+        }
+        return null;
+    }
 
-	private void modifyRequest(AbstractExchange exc, Mapping mapping) {
+    private void modifyRequest(AbstractExchange exc, Mapping mapping) {
 
-		exc.getRequest().setMethod("POST");
-		exc.getRequest().getHeader().setSOAPAction(mapping.soapAction);
-		Header header = exc.getRequest().getHeader();
-		header.removeFields(CONTENT_TYPE);
-		header.setContentType(isSOAP12(exc) ? APPLICATION_SOAP : TEXT_XML_UTF8);
+        exc.getRequest().setMethod("POST");
+        exc.getRequest().getHeader().setSOAPAction(mapping.soapAction);
+        Header header = exc.getRequest().getHeader();
+        header.removeFields(CONTENT_TYPE);
+        header.setContentType(isSOAP12(exc) ? APPLICATION_SOAP : TEXT_XML_UTF8);
 
-		exc.setProperty("mapping", mapping);
-		setServiceEndpoint(exc, mapping);
-	}
+        exc.setProperty("mapping", mapping);
+        setServiceEndpoint(exc, mapping);
+    }
 
-	private boolean isSOAP12(AbstractExchange exc) {
-		if (isSOAP12 != null)
-			return isSOAP12;
-		isSOAP12 = SOAP12_NS.equals(getRootElementNamespace(exc.getRequest().getBodyAsStream()));
-		return isSOAP12;
-	}
+    private boolean isSOAP12(AbstractExchange exc) {
+        if (isSOAP12 != null)
+            return isSOAP12;
+        isSOAP12 = SOAP12_NS.equals(getRootElementNamespace(exc.getRequest().getBodyAsStream()));
+        return isSOAP12;
+    }
 
-	private String getRootElementNamespace(InputStream stream) {
-		try {
-			XMLEventReader xer = XMLInputFactory.newFactory().createXMLEventReader(stream);
-			while (xer.hasNext()) {
-				XMLEvent event = xer.nextEvent();
-				if (event.isStartElement())
-					return event.asStartElement().getName().getNamespaceURI();
-			}
-		} catch (XMLStreamException e) {
-			log.error("Could not determine root element namespace for check whether namespace is SOAP 1.2.", e);
-		}
-		return null;
-	}
+    private String getRootElementNamespace(InputStream stream) {
+        try {
+            XMLEventReader xer = XMLInputFactory.newFactory().createXMLEventReader(stream);
+            while (xer.hasNext()) {
+                XMLEvent event = xer.nextEvent();
+                if (event.isStartElement())
+                    return event.asStartElement().getName().getNamespaceURI();
+            }
+        } catch (XMLStreamException e) {
+            log.error("Could not determine root element namespace for check whether namespace is SOAP 1.2.", e);
+        }
+        return null;
+    }
 
-	private void setJSONContentType(Header header) {
-		header.removeFields(CONTENT_TYPE);
-		header.setContentType(APPLICATION_JSON_UTF8);
-	}
+    private void setJSONContentType(Header header) {
+        header.removeFields(CONTENT_TYPE);
+        header.setContentType(APPLICATION_JSON_UTF8);
+    }
 
-	private void setServiceEndpoint(AbstractExchange exc, Mapping mapping) {
-		exc.getRequest().setUri(
-				getURI(exc).replaceAll(mapping.regex, mapping.soapURI));
+    private void setServiceEndpoint(AbstractExchange exc, Mapping mapping) {
+        exc.getRequest().setUri(
+                getURI(exc).replaceAll(mapping.regex, mapping.soapURI));
 
-		String newDestination = getNewDestination(exc);
-		exc.getDestinations().clear();
-		exc.getDestinations().add(newDestination);
+        String newDestination = getNewDestination(exc);
+        exc.getDestinations().clear();
+        exc.getDestinations().add(newDestination);
 
-		log.debug("destination set to: " + newDestination);
-	}
+        log.debug("destination set to: {}",newDestination);
+    }
 
-	private String getNewDestination(AbstractExchange exc) {
-		return getProtocol(exc) + "://" + ((AbstractServiceProxy) exc.getRule()).getTargetHost() + ":"
-				+ ((AbstractServiceProxy) exc.getRule()).getTargetPort()
-				+ exc.getRequest().getUri();
-	}
+    private String getNewDestination(AbstractExchange exc) {
+        return getProtocol(exc) + "://" + ((AbstractServiceProxy) exc.getProxy()).getTargetHost() + ":"
+               + ((AbstractServiceProxy) exc.getProxy()).getTargetPort()
+               + exc.getRequest().getUri();
+    }
 
-	private String getProtocol(AbstractExchange exc) {
-		if(exc.getRule().getSslOutboundContext() != null) {
-			return "https";
-		}
-		return "http";
-	}
+    private String getProtocol(AbstractExchange exc) {
+        if (exc.getProxy() instanceof SSLableProxy sp) {
+            if (sp.getSslOutboundContext() != null) {
+                return "https";
+            }
+        }
+        return "http";
+    }
 
-	private String getURI(AbstractExchange exc) {
-		return exc.getRequest().getUri();
-	}
+    private String getURI(AbstractExchange exc) {
+        return exc.getRequest().getUri();
+    }
 
-	public List<Mapping> getMappings() {
-		return mappings;
-	}
+    public List<Mapping> getMappings() {
+        return mappings;
+    }
 
-	/**
-	 * @description Specifies the mappings. The first matching mapping will be applied to the request.
-	 */
-	@MCChildElement
-	public void setMappings(List<Mapping> mappings) {
-		this.mappings = mappings;
-	}
+    /**
+     * @description Specifies the mappings. The first matching mapping will be applied to the request.
+     */
+    @MCChildElement
+    public void setMappings(List<Mapping> mappings) {
+        this.mappings = mappings;
+    }
 
-	@Override
-	public String getShortDescription() {
-		return "Transforms REST requests into SOAP and responses vice versa.";
-	}
+    @Override
+    public String getShortDescription() {
+        return "Transforms REST requests into SOAP and responses vice versa.";
+    }
 }
